[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["lambda_utils"]

[project]
name = "lambda_utils"
dynamic = ["readme"]
version = "1.1.0"
authors = [{ name = "Lars Schlegelmilch" }]
description = "utils for python based aws lambdas based on powertools"
dependencies = ["aws_lambda_powertools", "boto3"]
requires-python = ">=3.9"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
